--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,17 +26,13 @@ jobs:
       
     - name: Execute a few commands
       run : |
-        echo "Hello world"
-        echo "We are going to deploy my repo to remote AWS server
-        echo "It's not so hard as you think"
-        echo "Let's see what do we have here in current folder..."
         echo "Hello : $F_NAME $L_NAME this is local environment variables to this step"
       env : 
               F_NAME: "Mario"
               L_NAME: "Miranda"
               
-#    - name: List current folder
-#      run : ls -la
+    - name: List current folder
+      run : ls -la
       
     - name: Print value of Global Environment Variable
       run : echo ${{ env.MY_APP_NAME }}
