--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -51,4 +51,8 @@ jobs:
       run : mvn compile quarkus:build
       
     - name: Trying to recover secret from Github
-      run : echo ${{ secrets.CA_AWS }}
+      run : |
+        yum -y install openssh-clients
+        chmod 400 ${{ secrets.CA_AWS }}
+        scp -r StrictHostKeyChecking=no -i$CA_AWS ./target/curso.projeto-dev.jar ubuntu@ec2-3-96-66-189.ca-central-1.compute.amazonaws.com:/home/ubuntu/
+        ssh -o StrictHostKeyChecking=no -i$CA_AWS ubuntu@ec2-3-96-66-189.ca-central-1.compute.amazonaws.com './subir.sh | exit'
